fix: Fixed bottom padding on main_section covering content

--- a/director/assets/sass/styles.sass
+++ b/director/assets/sass/styles.sass
@@ -63,8 +63,7 @@ body, html
 
 #main_section
   padding-top: 51px
-  /* padding-bottom: $footer-height */
-  padding-bottom: 0
+  padding-bottom: $footer-height
   height: 100%
 
   > .container
